--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <input type ="button" value="Cliquer"/>
 <input type ="button" value="Valider"/>
+<input type ="button" value="OK"/>
+
 
 <section> B </section>
 
